# django-querysets-single-query-fetch

./: README.md  check-lint.sh  dev-requirements.txt  lint.sh  manage.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: release.yml  test.yml
django_querysets_single_query_fetch/: apps.py  service.py
testapp/: models.py
testapp/migrations/: 0001_initial.py  0002_storeproduct_meta.py
testapp/tests/: test_aggregate_wrapper_for_postgres.py  test_annotate_for_postgres.py  test_behaviour_for_postgres.py  test_count_wrapper_for_postgres.py  test_get_or_none_wrapper_for_postgres.py
testproject/: asgi.py  settings.py  urls.py  wsgi.py
